# datagroom-mcp-server

./: .env.example  QUICKSTART.md  README.md  pyproject.toml
src/datagroom_mcp/: __init__.py  config.py  formatters.py  gateway_client.py  server.py
