[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datagroom-mcp-server"
version = "0.1.0"
description = "MCP server for Datagroom dataset access"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.1.2",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
datagroom-mcp = "datagroom_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/datagroom_mcp"]
